--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -28,6 +28,7 @@ frame-system-rpc-runtime-api = {default-features = false, git = "https://github.
 pallet-authorship = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
 pallet-babe = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
 pallet-balances = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
+pallet-bounties = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
 pallet-collective = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
 pallet-contracts = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
 pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" , default-features = false }
@@ -66,6 +67,7 @@ pallet-membership = {default-features = false, git = "https://github.com/parityt
 pallet-scheduler = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
 pallet-utility = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
 frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git",  tag = "v3.0.0" }
+orml-utilities = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', rev = 'fb405b1', default-features = false }
 
 smallvec = "1.4.1"
 
